--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 				<h2>Software Developer</h2>
 				<hr>
 				<h3>About Me:</h3>
-					<h4>My hometown is Sant Celoni.</h4>
+					<h4>My hometown is Barcelona.</h4>
 					<h4>My favorite color is Black.</h4>
 					<h4>My favorite food is Sushi.</h4>
 					<h4>If I could be any animal, I would be A TIGER.</h4>
+                    <p>Meow! Meow! Meow!</p>
 			</div>
 		  </body>
 		</html>
